# NLHoldem-RL

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.tensorflow-api  Dockerfile.tensorflow-cli  Dockerfile.tensorflow-notebook  Makefile  README.md  apt-packages.txt  docker-compose.yaml  pyproject.toml  rename.sh
notebooks/: exploration.ipynb
src/nlholdem/: api.py  predict.py  train.py  ui.py  web.py
src/nlholdem/static/: style.css
src/nlholdem/templates/: table.html
src/{{package_name}}/: api.py  predict.py
tests/: test_train.py  test_ui.py
