[tool.poetry]
name = "{{package_name}}"
version = "0.1.0"
description = "Machine Learning / Deep Learning Project Template"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "{{package_name}}", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.19"
mlflow = "^2.21"
ipython = "^9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
jupyter = "^1.0"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
