[tool.poetry]
name = "nlholdem"
version = "0.1.0"
description = "No Limit Texas Holdem Poker AI"
authors = ["David E. Weirich <weirich.david@gmail.com>"]
packages = [{ include = "nlholdem", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.19"
mlflow = "^2.21"
ipython = "^9.1"
pokerkit = "^0.6.3"
flask = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
jupyter = "^1.0"
pre-commit = "^3.7"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
